fixed cart icon alignment

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ h1 {
   }
   .btn-cart img {
     width: 4%;
-    position: fixed;
+    position: absolute;
     left: 5em;
     top: 16px;
   }
